--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/camerabutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -58,10 +58,10 @@
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/lockbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button5"
+        android:layout_below="@+id/camerabutton"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
@@ -71,10 +71,10 @@
         app:layout_constraintStart_toStartOf="@+id/button3" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/unlockbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button6"
+        android:layout_below="@+id/lockbutton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp"
         android:text="Unlock"
