--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="78dp"
         android:layout_marginEnd="76dp"
         android:src="@drawable/smailboxlogo"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -55,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/unlockbutton" />
 
     <Button
         android:id="@+id/lockbutton"
@@ -67,8 +67,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="Lock"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
+        app:layout_constraintBottom_toTopOf="@+id/unlockbutton"
+        app:layout_constraintStart_toStartOf="@+id/unlockbutton" />
 
     <Button
         android:id="@+id/unlockbutton"
@@ -78,7 +78,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp"
         android:text="Unlock"
-        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="@+id/camerabutton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
