Edited the button size

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,9 +16,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginEnd="71dp"
         android:src="@drawable/smailboxlogo"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,8 +31,8 @@
         android:layout_below="@+id/imageView"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginTop="-194dp"
+        android:layout_marginEnd="138dp"
         android:fontFamily="monospace"
         android:text="SMailBox"
         app:autoSizeTextType="uniform"
@@ -45,13 +45,14 @@
 
     <Button
         android:id="@+id/camerabutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="311dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="296dp"
         android:text="Camera"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,25 +60,27 @@
 
     <Button
         android:id="@+id/lockbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
         android:layout_below="@+id/camerabutton"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="Lock"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/unlockbutton"
         app:layout_constraintStart_toStartOf="@+id/unlockbutton" />
 
     <Button
         android:id="@+id/unlockbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
         android:layout_below="@+id/lockbutton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="6dp"
         android:text="Unlock"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="@+id/camerabutton"
         app:layout_constraintTop_toTopOf="parent" />
 
