--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,44 +40,45 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="238dp"
-        android:text="Unlock"
-        app:layout_constraintStart_toStartOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="370dp"
-        android:layout_marginBottom="20dp"
-        android:text="Lock"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/camerabutton"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="296dp"
         android:text="Camera"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/unlockbutton" />
+
+    <Button
+        android:id="@+id/lockbutton"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
+        android:layout_below="@+id/camerabutton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="Lock"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/unlockbutton"
+        app:layout_constraintStart_toStartOf="@+id/unlockbutton" />
+
+    <Button
+        android:id="@+id/unlockbutton"
+        android:layout_width="188dp"
+        android:layout_height="86dp"
+        android:layout_below="@+id/lockbutton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:text="Unlock"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="@+id/camerabutton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:layout_width="0dp"
