--- a/app/src/main/res/layout/activity_uspshome.xml
+++ b/app/src/main/res/layout/activity_uspshome.xml
@@ -44,28 +44,13 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <Button
-        android:id="@+id/camerabutton"
-        android:layout_width="188dp"
-        android:layout_height="86dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="296dp"
-        android:text="Camera"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uspsunlockbutton" />
-
-    <Button
         android:id="@+id/uspslockbutton"
         android:layout_width="188dp"
         android:layout_height="86dp"
-        android:layout_below="@+id/camerabutton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="44dp"
         android:layout_marginBottom="20dp"
         android:text="Lock"
         android:textSize="30sp"
@@ -77,7 +62,8 @@
         android:layout_width="188dp"
         android:layout_height="86dp"
         android:layout_below="@+id/uspslockbutton"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="112dp"
         android:layout_marginTop="6dp"
         android:text="Unlock"
         android:textSize="30sp"
