--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/smailBoxLogo"
         android:layout_width="269dp"
         android:layout_height="143dp"
         android:layout_alignParentStart="true"
@@ -20,17 +20,18 @@
         android:layout_marginTop="69dp"
         android:layout_marginEnd="71dp"
         android:src="@drawable/smailboxlogo"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/smailBoxText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/smailBoxText"
         android:layout_width="134dp"
         android:layout_height="41dp"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/smailBoxLogo"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="138dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="139dp"
         android:fontFamily="monospace"
@@ -44,44 +45,44 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <Button
-        android:id="@+id/camerabutton"
+        android:id="@+id/usercamerabutton"
         android:layout_width="188dp"
         android:layout_height="86dp"
+        android:layout_below="@+id/smailBoxText"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="112dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="10dp"
         android:text="Camera"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uspsunlockbutton" />
+        app:layout_constraintTop_toBottomOf="@+id/userunlockbutton" />
 
     <Button
-        android:id="@+id/uspslockbutton"
+        android:id="@+id/userlockbutton"
         android:layout_width="188dp"
         android:layout_height="86dp"
-        android:layout_below="@+id/camerabutton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@+id/usercamerabutton"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="10dp"
         android:text="Lock"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/uspsunlockbutton"
-        app:layout_constraintStart_toStartOf="@+id/uspsunlockbutton" />
+        app:layout_constraintBottom_toTopOf="@+id/userunlockbutton"
+        app:layout_constraintStart_toStartOf="@+id/userunlockbutton" />
 
     <Button
-        android:id="@+id/uspsunlockbutton"
+        android:id="@+id/userunlockbutton"
         android:layout_width="188dp"
         android:layout_height="86dp"
-        android:layout_below="@+id/uspslockbutton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp"
+        android:layout_below="@+id/userlockbutton"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="10dp"
         android:text="Unlock"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="@+id/camerabutton"
+        app:layout_constraintStart_toStartOf="@+id/usercamerabutton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
