--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
         android:id="@+id/textView3"
         android:layout_width="134dp"
         android:layout_height="41dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="139dp"
         android:layout_marginTop="226dp"
         android:layout_marginEnd="138dp"
         android:fontFamily="monospace"
