--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,33 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ProfileActivity">
 
-
-    <Button
-        android:id="@+id/uspsbutton"
-        android:layout_width="188dp"
-        android:layout_height="86dp"
-        android:layout_below="@+id/userbutton"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="269dp"
+        android:layout_height="143dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="20dp"
-        android:text="USPS"
-        android:textSize="30sp" />
-
-    <Button
-        android:id="@+id/userbutton"
-        android:layout_width="188dp"
-        android:layout_height="86dp"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="30dp"
-        android:text="USER"
-        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginEnd="71dp"
+        android:src="@drawable/smailboxlogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -53,21 +42,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.34" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="269dp"
-        android:layout_height="143dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="69dp"
-        android:layout_marginEnd="71dp"
-        android:src="@drawable/smailboxlogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -78,5 +52,31 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.977" />
+
+    <Button
+        android:id="@+id/userbutton"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="25dp"
+        android:text="USER"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/uspsbutton"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/userbutton"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
+        android:text="USPS"
+        android:textSize="30sp" />
 
 </RelativeLayout>
